--- a/app/src/main/res/layout/fragment_favourite_list.xml
+++ b/app/src/main/res/layout/fragment_favourite_list.xml
@@ -2,14 +2,18 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/favouriteContainer"
     android:name="it.unica.ium.italiantour.FavouriteFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="4dp"
-    android:paddingRight="4dp"
     android:paddingTop="4dp"
+    android:paddingRight="4dp"
     android:paddingBottom="4dp"
+    android:scrollbars="vertical"
     android:background="?attr/colorPrimary"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:context=".FavouriteFragment"
     tools:listitem="@layout/fragment_favourite" />
