--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/details_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -53,8 +52,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="Titolo"
+            android:maxLines="2"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/details_favButton"
             app:layout_constraintStart_toEndOf="@+id/details_thumbnail"
@@ -105,8 +104,13 @@
         android:id="@+id/details_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="?attr/colorBackgroundFloating"
         android:paddingLeft="8dp"
+        android:paddingTop="8dp"
         android:paddingRight="8dp"
         android:paddingBottom="16dp"
         android:text="Descrizione"
