Fixed title card cutting content off.

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -23,8 +23,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/details_card"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:minHeight="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -48,11 +49,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Titolo"
             android:maxLines="2"
+            android:text="Titolo"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/details_favButton"
@@ -62,16 +62,14 @@
         <TextView
             android:id="@+id/details_hours"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
             android:maxLines="3"
             android:text="Orari"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/details_favButton"
             app:layout_constraintStart_toStartOf="@+id/details_title"
             app:layout_constraintTop_toBottomOf="@id/details_title" />
