--- a/app/src/main/res/layout/fragment_new_marker.xml
+++ b/app/src/main/res/layout/fragment_new_marker.xml
@@ -128,6 +128,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Foto:"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 app:layout_constraintStart_toStartOf="@+id/newMarker_position_text"
                 app:layout_constraintTop_toBottomOf="@+id/newMarker_fragment" />
 
