--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <group
+        android:id="@+id/task_lists">
         <item
             android:id="@+id/mapFragment"
             android:icon="@drawable/ic_map_white_24dp"
@@ -15,7 +17,8 @@
             android:title="Aggiungi luogo"/>
     </group>
 
-    <group>
+    <group
+        android:id="@+id/user_options">
         <item
             android:id="@+id/logoutFragment"
             android:icon="@drawable/ic_undo_white_24dp"
